--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,5 @@ spring.application.name=SpringBootSecurityDemoApplication
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_hiber
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=spring_hiber
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.springframework.security=DEBUG
