added spring cloud compatibility

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=SpringBootSecurityDemoApplication
+
+spring.config.import=http://localhost:8888/
+spring.profiles.active=micro
+
+
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_hiber
 spring.datasource.username=root
 spring.datasource.password=password
